--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="hero">
         <h1>Metric/Imperical Unit Conversion</h1>
-        <input type="text" placeholder="0">
+        <input type="text" >
         <button>Convert</button>
     </div>
     <div class="main">
